# web-template

./: .gitignore  README.md  docker-compose.yml  tasks.py
.github/workflows/: deployment.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml
backend/appname/config/: .env.example  __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  Dockerfile.local  package.json
frontend/src/: App.tsx
